added float style as opposed to align to better format input boxes

--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -199,7 +199,7 @@ function get_sequence(rc,pro,add){
 </DIV>
    <div id=extend_title class="seqbackbox"><font class="oblique"><TMPL_VAR NAME="EXTEND"></font></div>
   <table>
- <TR align = left> 
+ <TR style="float:left"> 
 <!--    <form id="nt_stream" name="nt_stream"> -->
   <TD>
    <TMPL_VAR NAME = "UPSTREAM">
