add needed javascript function. called from flash to set drup/down textboxes.

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -6,6 +6,9 @@
 </HEAD>
 <script src="/CoGe/gobe/static/swfobject.js" ></script>
 <SCRIPT language="JavaScript">
+function set_genespace(drid,value){
+    document.getElementById(drid).value = value;
+}
 
 $(document).ready(function(){
  //prefetch button images
