--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -236,7 +236,7 @@ function handle_results (html,w, h, img_base, n_images,message) {
     so.addVariable('tmp_dir', 'tmp/');
     so.addVariable('img', img_base );
     so.addVariable('freezable', getQueryParamValue('freezable') || 'false'); 
-    so.addVariable('inset_gs', getQueryParamValue('inset_gs') || '0'); 
+    so.addVariable('pad_gs', getQueryParamValue('pad_gs') || '0'); 
     so.addVariable('gsid', getQueryParamValue('gsid') || '0'); 
 so.write("flash_viewer");
    }
