--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -55,6 +55,10 @@ function onEnter(e){
   if(e.which == 13){
     redefine();}
 }
+function display_feat_info(html){
+ $('#feature_info').html(html).show(pageObj.speed);
+}
+
 
 function get_blast_info(){
   var url = location.href;
@@ -156,6 +160,7 @@ function get_sequence(rc,pro,add){
         <TD>
         <textarea id=seq_text name=seq_text class=backbox readonly ondblclick="this.select();" style="height: 400px; width: 750px; overflow: auto;"></textarea>
 	</TD>
+       <TMPL_VAR NAME=FEAT_INFO>
        </TR>
       </TABLE>
  </div>
@@ -165,13 +170,13 @@ function get_sequence(rc,pro,add){
   <TABLE>
    <TR>
       <TD align=right valign="top">
-       <DIV class="seqview_button dna_button>" style="display: none" id="dna_button"><input type=button value="DNA Sequence" onClick="dynamic_buttons('dna_button');get_sequence(0,0);gen_title(['args__0','args__0'],['box_name']);"></DIV>     
+       <DIV class="seqview_button dna_button>" style="display: none" id="dna_button"><input type=button value="DNA Sequence" onClick="dynamic_buttons('dna_button');get_sequence(0,0);gen_title(['args__rc','args__0','args__pro','args__0'],['box_name']);"></DIV>     
       </TD>
       <TD align=right valign="top">
-      <DIV class="seqview_button rc_button>" id="rc_button"><input type=button value="Reverse Complement" onClick="dynamic_buttons('rc_button');get_sequence(1,0);gen_title(['args__1','args__0'],['box_name']);"></DIV>
+      <DIV class="seqview_button rc_button>" id="rc_button"><input type=button value="Reverse Complement" onClick="dynamic_buttons('rc_button');get_sequence(1,0);gen_title(['args__rc','args__1','args__pro','args__0'],['box_name']);"></DIV>
       </TD>
       <TD align=right valign="top">
-         <DIV class="seqview_button pro_button>" id="pro_button"><input type=button value="<TMPL_VAR NAME=PROTEIN>" onClick="dynamic_buttons('pro_button');get_sequence(<TMPL_VAR NAME=PRO_RC>,<TMPL_VAR NAME=PRO_PRO>);gen_title(['args__<TMPL_VAR NAME=PRO_RC>','args__<TMPL_VAR NAME=PRO_PRO>'],['box_name']);"></DIV>
+         <DIV class="seqview_button pro_button>" id="pro_button"><input type=button value="<TMPL_VAR NAME=PROTEIN>" onClick="dynamic_buttons('pro_button');get_sequence(<TMPL_VAR NAME=PRO_RC>,<TMPL_VAR NAME=PRO_PRO>);gen_title(['args__rc','args__<TMPL_VAR NAME=PRO_RC>','args__pro','args__<TMPL_VAR NAME=PRO_PRO>'],['box_name']);"></DIV>
       </TD>
       <!--get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__<TMPL_VAR NAME=START>','args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__add', 'args__<TMPL_VAR NAME=ADD>'],[get_sequence]);gen_title(['args__rc', 'args__<TMPL_VAR NAME=TITLE_RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name']);-->
      <TMPL_IF NAME=FIND_FEATS>
@@ -216,7 +221,10 @@ function get_sequence(rc,pro,add){
 <!--    </form> -->
   </TR>
   <TMPL_IF NAME=ADD_EXTRA>
-  <TR align = left>
+  <TR style="float:left">
+  <TD>
+  OR
+  </td>
    <TD>
      Add to Upstream:
     </td>
@@ -241,7 +249,6 @@ function get_sequence(rc,pro,add){
       <input type= button value ="Add to Sequence" id = "add_to" onClick="redefine();"> 
    </TMPL_IF>
    <TMPL_IF NAME="RANGE">
-
     <TR>
      <TD>
       <input type= button value ="Redefine Sequence" id = "add_to" onClick="redefine();"> 
