--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -28,10 +28,7 @@
 
 jQuery(document).ready(function(){ 
   var anim_speed = jQuery.cookie('anim_speed');
-  //alert(anim_speed);
-  if (! anim_speed){
-  //alert('I am messing up');
-    jQuery.cookie('anim_speed',600);}
+  if (! anim_speed){jQuery.cookie('anim_speed',600);}
   pageObj = new Object();
   pageObj.speed = jQuery.cookie('anim_speed') || 600;
   define_animation_speed(pageObj.speed)
