updated link to GeLo.pl

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -59,7 +59,7 @@ function launch_viewer (dsd, chr) {
  x = $('#x').val();
  z = $('#z').val();
  if (z > 12) {z=12;}
- link =  "GenomeView.pl?z="+z+"&x="+x+"&ds="+dsd+"&chr="+chr;
+ link =  "GeLo.pl?z="+z+"&x="+x+"&ds="+dsd+"&chr="+chr;
  window.location=link;
 }
 function timing(val){
