--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -115,7 +115,7 @@ function animate_section(name, style, speedy, show) {
 	  <li><a href="/CoGe/FeatView.pl" target="_self">FeatView</a></li>
 	  <li><a href="/CoGe/MSAView.pl" target="_self">MSAView</a></li>
 	  <li><a href="/CoGe/TreeView.pl" target="_self">TreeView</a></li>
-	  <li><a href="/CoGe/GeLo.pl" target="_self">GeLoView</a></li>
+	  <li><a href="/CoGe/GenomeView.pl" target="_self">GenomeView</a></li>
 	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
       </ul>
 	</li>
