Page focuses on user textbox when page loads

--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -41,6 +41,9 @@ $('#main').show(pageObj.speed);
 );
 
 
+$(document).ready(function(){
+  $('#uname').focus();
+});
 
 window.onload=(
 	function() {
