added tmpl var for fasta file link

--- a/web/tmpl/FastaView.tmpl
+++ b/web/tmpl/FastaView.tmpl
@@ -5,6 +5,10 @@
         <textarea id=seq_text name=seq_text class=backbox readonly ondblclick="this.select();" style="height: 400px; width: 750px; overflow: auto;"><TMPL_VAR NAME="SEQ"></textarea>
 	</TD>
        </TR>
+       <tr>
+        <td>
+         <TMPL_VAR NAME=FILE>
+         </tr>
       </TABLE>
  </div>
 
